[package]
name = "project2"
resolver = "2"
edition = "2021"

[build-dependencies]
lutra-codegen = { path = "../../lutra-codegen" }

[dependencies]
lutra-bin = { path = "../../lutra-bin" }
lutra-runner-postgres = { path = "../../lutra-runner-postgres", features = ["tokio-postgres"]}
tokio = { version = "1.48.0", features = ["macros", "rt"] }
