[package]
name = "lutra-runner-postgres-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "lutra_runner_postgres"
crate-type = ["cdylib"]
test = false

[dependencies]
lutra-runner-postgres = { path = "..", default-features = false, features = [
    "tokio-postgres",
] }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
tokio-postgres = "0.7.13"
tokio = { workspace = true }
log.workspace = true
lutra-runner = { version = "0.1.0", path = "../../lutra-runner" }
lutra-bin = { version = "0.1.0", path = "../../lutra-bin" }
